--- a/.github/workflows/lint-api.yaml
+++ b/.github/workflows/lint-api.yaml
@@ -12,4 +12,6 @@ jobs:
         with:
           go-version: ${{ vars.GO_VERSION }}
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@v8
+        with:
+          working-directory: api
