add workspace setup docs

--- a/api/taskfile.yaml
+++ b/api/taskfile.yaml
@@ -17,6 +17,7 @@ tasks:
   generateEnv:
     cmds:
       - touch .env
+      - truncate -s 0 .env
       - echo "HOST=localhost" >> .env
       - echo "PORT=3000" >> .env
       - echo "JWT_KEY=$(openssl rand -base64 32)" >> .env
@@ -24,6 +25,8 @@ tasks:
   generateJWT:
     dotenv: [.env]
     silent: true
+    preconditions:
+      - openssl version
     cmds:
       - |
         jwt_header=$(echo -n '{"alg":"HS256","typ":"JWT"}' | base64 | sed s/\+/-/g | sed 's/\//_/g' | sed -E s/=+$//)
