--- a/.github/workflows/ci-api.yaml
+++ b/.github/workflows/ci-api.yaml
@@ -2,7 +2,7 @@ name: CI API
 on:
   push:
     branches: [main]
-    paths: [api/*]
+    paths: [api/*, .github/*]
   pull_request:
     branches: [main]
     types: [opened, synchronize, reopened]
