--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
 		"@eslint/js": "^9.36.0",
+		"@iconify/json": "^2.2.392",
 		"@lucide/svelte": "^0.545.0",
 		"@playwright/test": "^1.55.1",
 		"@sveltejs/adapter-auto": "^6.1.0",
@@ -45,6 +46,7 @@
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.44.1",
+		"unplugin-icons": "^22.4.2",
 		"vite": "^7.1.7",
 		"vitest": "^3.2.4",
 		"vitest-browser-svelte": "^1.1.0"
@@ -53,5 +55,8 @@
 		"onlyBuiltDependencies": [
 			"esbuild"
 		]
+	},
+	"dependencies": {
+		"mode-watcher": "^1.1.0"
 	}
 }
