fix path filter for CI pipelines

--- a/.github/workflows/ci-api.yaml
+++ b/.github/workflows/ci-api.yaml
@@ -2,10 +2,11 @@ name: CI API
 on:
   push:
     branches: [main]
-    paths: [api/*, .github/*]
+    paths: [api/**, .github/**]
   pull_request:
     branches: [main]
     types: [opened, synchronize, reopened]
+    paths: [api/**, .github/**]
 
 jobs:
   build:
