--- a/.github/workflows/ci-web.yaml
+++ b/.github/workflows/ci-web.yaml
@@ -2,10 +2,11 @@ name: CI Web
 on:
   push:
     branches: [main]
-    paths: [web/*, .github/*]
+    paths: [web/**, .github/**]
   pull_request:
     branches: [main]
     types: [opened, synchronize, reopened]
+    paths: [web/**, .github/**]
 
 jobs:
   build:
