--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
 		"@tailwindcss/typography": "^0.5.18",
 		"@tailwindcss/vite": "^4.1.13",
 		"@types/node": "^22",
+		"@types/prismjs": "^1.26.5",
 		"@vitest/browser": "^3.2.4",
 		"clsx": "^2.1.1",
 		"eslint": "^9.36.0",
@@ -58,6 +59,8 @@
 		]
 	},
 	"dependencies": {
-		"mode-watcher": "^1.1.0"
+		"codejar": "^4.2.0",
+		"mode-watcher": "^1.1.0",
+		"prismjs": "^1.30.0"
 	}
 }
