fix web e2e tests / fix ci api lint

--- a/.github/workflows/lint-api.yaml
+++ b/.github/workflows/lint-api.yaml
@@ -16,3 +16,5 @@ jobs:
           go-version: ${{ vars.GO_VERSION }}
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v8
+        with:
+          working-directory: api
