--- a/.github/workflows/test-web.yaml
+++ b/.github/workflows/test-web.yaml
@@ -43,6 +43,10 @@ jobs:
     defaults:
       run:
         working-directory: web
+    env:
+      NODE_ENV: ci
+      API_BASE_URL: ${{ vars.CI_API_BASE_URL }}
+      ACCESS_TOKEN: ${{ secrets.CI_ACCESS_TOKEN }}
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v4
