drop auto run in favor of manual trigger for ci pipelines
in order to prevent them running for every pipeline config change.

--- a/.github/workflows/ci-api.yaml
+++ b/.github/workflows/ci-api.yaml
@@ -2,11 +2,12 @@ name: CI API
 on:
   push:
     branches: [main]
-    paths: [api/**, .github/**]
+    paths: [api/**]
   pull_request:
     branches: [main]
     types: [opened, synchronize, reopened]
     paths: [api/**, .github/**]
+  workflow_dispatch:
 
 jobs:
   build:
