optimize web docker image
by reducing its size from ~750mb to ~150mb.

--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /app
 COPY . .
 RUN pnpm install --frozen-lockfile
 RUN pnpm run build
+RUN pnpm prune --prod # prune non-dev dependencies
 
 FROM node:jod-alpine
 WORKDIR /app
@@ -12,5 +13,6 @@ CMD [ "node", "index.js" ]
 ENV NODE_ENV=production
 ENV ORIGIN=http://localhost:4173
 ENV PORT=4173
+COPY --from=builder /app/package.json .
 COPY --from=builder /app/build .
 COPY --from=builder /app/node_modules node_modules
