add docs for web frontend

--- a/web/taskfile.yaml
+++ b/web/taskfile.yaml
@@ -44,6 +44,8 @@ tasks:
 
   generate:env:
     desc: Generates a .env file holding all relevant options for a local workspace
+    preconditions:
+      - stat ../api/.env
     cmds:
       - touch .env
       - truncate -s 0 .env
