--- a/web/package.json
+++ b/web/package.json
@@ -28,14 +28,17 @@
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
 		"@tailwindcss/typography": "^0.5.18",
 		"@tailwindcss/vite": "^4.1.13",
+		"@types/jsonwebtoken": "^9.0.10",
 		"@types/node": "^22",
 		"@types/prismjs": "^1.26.5",
+		"@types/wait-on": "^5.3.4",
 		"@vitest/browser": "^3.2.4",
 		"clsx": "^2.1.1",
 		"eslint": "^9.36.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
+		"jsonwebtoken": "^9.0.2",
 		"playwright": "^1.55.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
@@ -46,13 +49,15 @@
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^3.1.1",
 		"tailwindcss": "^4.1.13",
+		"testcontainers": "^11.7.1",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.44.1",
 		"unplugin-icons": "^22.4.2",
 		"vite": "^7.1.7",
 		"vitest": "^3.2.4",
-		"vitest-browser-svelte": "^1.1.0"
+		"vitest-browser-svelte": "^1.1.0",
+		"wait-on": "^9.0.1"
 	},
 	"pnpm": {
 		"onlyBuiltDependencies": [
