--- a/infrastructure/ansible/inventory.dev.yml
+++ b/infrastructure/ansible/inventory.dev.yml
@@ -27,6 +27,7 @@ k3s_cluster:
     token: "nh2wZ6nCxCvu69drWvqBw6gjBc1GpW0yZy8PTyWeKxN/+35/4y3Su0K5L7b3PehLnWoawlmkXwF2zHkCQPwXtw=="
     api_endpoint: "{{ hostvars[groups['server'][0]]['ansible_host'] | default(groups['server'][0]) }}"
 
+    helm_version: "v3.15.4"
     # Optional vars
     # extra_server_args: ""
     # extra_agent_args: ""
