--- a/infrastructure/ansible/site.yml
+++ b/infrastructure/ansible/site.yml
@@ -2,3 +2,10 @@
 
 - name: Install K3s
   ansible.builtin.import_playbook: k3s.orchestration.site
+
+- name: Cluster bootstraping
+  hosts: k3s_cluster
+  gather_facts: true
+  become: true
+  roles:
+    - role: helm
