extend ci with snyk code scanning
for both api & web.

--- a/.github/workflows/ci-api.yaml
+++ b/.github/workflows/ci-api.yaml
@@ -20,3 +20,8 @@ jobs:
   test:
     uses: ./.github/workflows/test-api.yaml
     needs: [build]
+
+  scan:
+    uses: ./.github/workflows/scan-api.yaml
+    needs: [lint, test] # scans are expensive -> only run if state is sane
+    secrets: inherit
