extend snyk container to scan base image

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -77,6 +77,7 @@ jobs:
         with:
           image: ${{ env.RC_TAG_API }}
           command: container test
+          args: --policy-path=api --file=api/Dockerfile
 
       - name: "Build Docker Image (Web)"
         uses: docker/build-push-action@v6
@@ -96,6 +97,7 @@ jobs:
         with:
           image: ${{ env.RC_TAG_WEB }}
           command: container test
+          args: --policy-path=web --file=web/Dockerfile
 
       # action does not rebuild the image - cache from the previous build step is used
       - name: "Push Image (API)"
