--- a/.github/workflows/scan-api.yaml
+++ b/.github/workflows/scan-api.yaml
@@ -4,25 +4,22 @@ on:
   workflow_dispatch: # allow manual executions if demand should arise
 
 jobs:
-  snyk-scan:
-    name: Snyk
+  snyk-code-scan:
+    name: Snyk Code
     runs-on: ubuntu-latest
     permissions:
       actions: read
       contents: read
-    defaults:
-      run:
-        working-directory: api
     steps:
       - uses: actions/checkout@v4
-      - name: Snyk Go Scan
+      - name: Snyk Code Scan
         uses: snyk/actions/golang@master
         id: snyk
         continue-on-error: true # allow to continue with report upload
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --sarif-file-output=snyk-api.sarif ./api
+          args: --policy-path=api/.snyk --sarif-file-output=snyk-api.sarif ./api
           command: code test
 
       - name: Upload report
@@ -34,4 +31,33 @@ jobs:
         if: steps.snyk.outcome == 'failure'
         run: |
           echo "❌ Snyk found vulnerabilities."
+          exit 1
+
+  snyk-dependency-scan:
+    name: Snyk Dependency
+    runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+    steps:
+      - uses: actions/checkout@v4
+      - name: Snyk Dependency Scan
+        uses: snyk/actions/golang@master
+        id: snyk
+        continue-on-error: true # allow to continue with report upload
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --policy-path=api/.snyk --sarif-file-output=snyk-api.sarif ./api
+          command: test
+
+      - name: Upload report
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: snyk-api.sarif
+
+      - name: Analyze report
+        if: steps.snyk.outcome == 'failure'
+        run: |
+          echo "❌ Snyk found vulnerable dependencies."
           exit 1
