--- a/.github/workflows/scan-api.yaml
+++ b/.github/workflows/scan-api.yaml
@@ -10,6 +10,7 @@ jobs:
     permissions:
       actions: read
       contents: read
+      security-events: write
     steps:
       - uses: actions/checkout@v4
       - name: Snyk Code Scan
@@ -39,6 +40,7 @@ jobs:
     permissions:
       actions: read
       contents: read
+      security-events: write
     steps:
       - uses: actions/checkout@v4
       - name: Snyk Dependency Scan
