enable test coverage data output for both apit unit & e2e tests

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -3,7 +3,15 @@ FROM golang:1.25-alpine3.22 AS builder
 WORKDIR /app
 COPY . .
 RUN go mod tidy
-RUN go build -o bin/api
+
+# toggle for coverage instrumentation of e2e tests
+ARG WITH_COVERAGE=false
+RUN if [ "$WITH_COVERAGE" = "true" ]; then \
+    go build -cover -coverpkg=./... -o bin/api .; \
+    else \
+    go build -o bin/api; \
+    fi
+
 
 FROM alpine:3.22
 
