--- a/api/taskfile.yaml
+++ b/api/taskfile.yaml
@@ -35,6 +35,16 @@ tasks:
     cmds:
       - go test -v -tags e2e ./tests/e2e/...
 
+  test:cov:
+    desc: Runs all tests of the project, measuring their coverage
+    cmds:
+      - mkdir -p bin
+      - mkdir -p bin/coverage
+      - go test -coverprofile bin/cov_unit.out ./...
+      - task: test:e2e
+      - go tool covdata textfmt -i=bin/coverage -o=bin/cov_e2e.out
+      - gocovmerge bin/cov_unit.out bin/cov_e2e.out > bin/cov.out
+
   generate:env:
     desc: Generates a .env file holding all relevant options for a local workspace
     cmds:
