--- a/api/taskfile.yaml
+++ b/api/taskfile.yaml
@@ -41,9 +41,10 @@ tasks:
       - mkdir -p bin
       - mkdir -p bin/coverage
       - go test -coverprofile bin/cov_unit.out ./...
-      - task: test:e2e
+      - go test -v -tags e2e ./tests/e2e/...
       - go tool covdata textfmt -i=bin/coverage -o=bin/cov_e2e.out
       - gocovmerge bin/cov_unit.out bin/cov_e2e.out > bin/cov.out
+      - if [ "{{.show | default `false`}}" = "true" ]; then go tool cover -html=bin/cov.out; fi
 
   generate:env:
     desc: Generates a .env file holding all relevant options for a local workspace
