--- a/.github/workflows/ci-api.yaml
+++ b/.github/workflows/ci-api.yaml
@@ -16,6 +16,7 @@ jobs:
   lint:
     uses: ./.github/workflows/lint-api.yaml
     needs: [build]
+    secrets: inherit
 
   test:
     uses: ./.github/workflows/test-api.yaml
