adjust working directory for sonar action

--- a/.github/workflows/lint-api.yaml
+++ b/.github/workflows/lint-api.yaml
@@ -38,3 +38,5 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@master
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_API }}
+        with:
+          projectBaseDir: api
