--- a/infrastructure/ansible/site.yml
+++ b/infrastructure/ansible/site.yml
@@ -1,11 +1,9 @@
-- hosts: all
-
-- name: Install K3s
-  ansible.builtin.import_playbook: k3s.orchestration.site
-
-- name: Cluster bootstraping
-  hosts: k3s_cluster
-  gather_facts: true
+- name: Install cluster loadbalancer
+  hosts: loadbalancer
   become: true
+  gather_facts: true
   roles:
-    - role: helm
+   - role: haproxy
+
+- name: Install K3s cluster
+  ansible.builtin.import_playbook: k3s.orchestration.site
