--- a/infrastructure/ansible/staging.yml
+++ b/infrastructure/ansible/staging.yml
@@ -10,12 +10,11 @@ mgmt:
   hosts:
     192.168.122.10: 
 
-lb:
-  hosts:
-    192.168.122.10:
-
 k3s_cluster:
   children:
+    loadbalancer:
+      hosts:
+        192.168.122.10:
     server:
       hosts:
         192.168.122.11:
