--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,9 @@
 		"lint": "prettier --check . && eslint .",
 		"test:unit": "vitest",
 		"test": "pnpm run test:unit -- --run && pnpm run test:e2e",
-		"test:e2e": "playwright test"
+		"test:e2e": "playwright test",
+		"test:cov": "vitest run --coverage && USE_PLUGIN_ISTANBUL=true pnpm run test:e2e",
+		"cov:merge": "nyc merge coverage/e2e coverage/coverage-e2e.json && nyc merge coverage coverage/coverage-combined.json && nyc report --temp-dir=coverage --reporter=lcov --reporter=text-summary"
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.4.0",
@@ -32,13 +34,15 @@
 		"@types/node": "^22",
 		"@types/prismjs": "^1.26.5",
 		"@types/wait-on": "^5.3.4",
-		"@vitest/browser": "^3.2.4",
+		"@vitest/browser": "^4.0.6",
+		"@vitest/coverage-istanbul": "^4.0.6",
 		"clsx": "^2.1.1",
 		"eslint": "^9.36.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
 		"jsonwebtoken": "^9.0.2",
+		"nyc": "^17.1.0",
 		"playwright": "^1.55.1",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
@@ -55,7 +59,8 @@
 		"typescript-eslint": "^8.44.1",
 		"unplugin-icons": "^22.4.2",
 		"vite": "^7.1.7",
-		"vitest": "^3.2.4",
+		"vite-plugin-istanbul": "^7.2.0",
+		"vitest": "^4.0.6",
 		"vitest-browser-svelte": "^1.1.0",
 		"wait-on": "^9.0.1"
 	},
