--- a/web/taskfile.yaml
+++ b/web/taskfile.yaml
@@ -45,8 +45,10 @@ tasks:
   test:cov:
     desc: Runs all tests of the project, while collecting coverage data
     cmds:
+      - rm -rf coverage
       - pnpm run test:cov
       - pnpm run cov:merge
+      - if [ "{{.show | default `false`}}" = "true" ]; then open coverage/lcov-report/index.html; fi
 
   generate:env:
     desc: Generates a .env file holding all relevant options for a local workspace
