feat: add configuration for cluster mgmt tools

--- a/infrastructure/ansible/group_vars/mgmt.yml
+++ b/infrastructure/ansible/group_vars/mgmt.yml
@@ -1,3 +1,13 @@
+# versions
 helm_version: "v3.15.4"
+kubectl_version: "v1.31.0"
 python_kubernetes_version: "34.1.0"
 argocd_chart_version: "8.6.3"
+
+# kubeconfig
+kubeconfig_user: "{{ ansible_user }}"
+kubeconfig_src_node: "{{ groups['server'][0] }}"
+kubeconfig_api_endpoint: "{{ groups['loadbalancer'][0] }}"
+
+# venv for ansible helm
+k3s_ansible_venv_path: "/opt/k3-ansible/.venv"
