--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,7 @@
 		"test": "pnpm run test:unit -- --run && pnpm run test:e2e",
 		"test:e2e": "playwright test",
 		"test:cov": "vitest run --coverage && USE_PLUGIN_ISTANBUL=true pnpm run test:e2e",
-		"cov:merge": "nyc merge coverage/e2e coverage/coverage-e2e.json && nyc merge coverage coverage/coverage-combined.json && nyc report --temp-dir=coverage --reporter=lcov --reporter=text-summary"
+		"cov:merge": "node scripts/postprocess-coverage.cjs && nyc report --temp-dir=coverage --reporter=lcov --reporter=text-summary"
 	},
 	"devDependencies": {
 		"@babel/cli": "^7.28.3",
@@ -33,6 +33,8 @@
 		"@sveltejs/vite-plugin-svelte": "^6.2.0",
 		"@tailwindcss/typography": "^0.5.18",
 		"@tailwindcss/vite": "^4.1.13",
+		"@types/istanbul-lib-coverage": "^2.0.6",
+		"@types/istanbul-lib-source-maps": "^4.0.4",
 		"@types/jsonwebtoken": "^9.0.10",
 		"@types/node": "^22",
 		"@types/prismjs": "^1.26.5",
@@ -45,6 +47,9 @@
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"globals": "^16.4.0",
+		"istanbul-lib-coverage": "^3.2.2",
+		"istanbul-lib-source-maps": "^5.0.6",
+		"istanbul-reports": "^3.2.0",
 		"jsonwebtoken": "^9.0.2",
 		"nyc": "^17.1.0",
 		"playwright": "^1.55.1",
