--- a/.github/workflows/lint-web.yaml
+++ b/.github/workflows/lint-web.yaml
@@ -39,3 +39,44 @@ jobs:
 
       - name: Check Svelte
         run: pnpm run check
+
+  sonarqube:
+    name: Sonar
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: web
+    steps:
+      - uses: actions/checkout@v4
+      - uses: arduino/setup-task@v2
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
+        with:
+          version: 10
+          run_install: false
+
+      - name: Cache node_modules
+        id: cache-node_modules
+        uses: actions/cache@v4
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      - name: Install Dependencies
+        if: steps.cache-node_modules.outputs.cache-hit != true
+        run: pnpm install --frozen-lockfile
+
+      - name: Create coverage reports
+        run: task test:cov show=false
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_WEB }}
+        with:
+          projectBaseDir: web
