add missing playwright browser install for lint workflow

--- a/.github/workflows/ci-web.yaml
+++ b/.github/workflows/ci-web.yaml
@@ -16,6 +16,7 @@ jobs:
   lint:
     uses: ./.github/workflows/lint-web.yaml
     needs: [build]
+    secrets: inherit
 
   test:
     uses: ./.github/workflows/test-web.yaml
