--- a/infrastructure/ansible/group_vars/k3s_cluster.yml
+++ b/infrastructure/ansible/group_vars/k3s_cluster.yml
@@ -1,10 +1,13 @@
 k3s_version: v1.31.12+k3s1
 
 api_endpoint: "{{ groups['loadbalancer'][0]| default(groups['server'][0]) }}"
-#api_endpoint: "{{ hostvars[groups['server'][0]]['ansible_host'] | default(groups['server'][0]) }}"
 api_port: 6443
 
 token: "CHANGE_ME!"
+
+#argocd_url: "argo.g08.local"
+argocd_url: "192.168.122.11.nip.io"
+
 # Optional vars
 # extra_server_args: ""
 # extra_agent_args: ""
