--- a/infrastructure/ansible/requirements.yml
+++ b/infrastructure/ansible/requirements.yml
@@ -2,3 +2,5 @@ collections:
   - name: https://github.com/k3s-io/k3s-ansible.git
     type: git
     version: 1.1.0
+  - name: kubernetes.core
+    version: 6.2.0
