feat: expose cluster ingress via haproxy

--- a/infrastructure/ansible/group_vars/k3s_cluster.yml
+++ b/infrastructure/ansible/group_vars/k3s_cluster.yml
@@ -5,8 +5,7 @@ api_port: 6443
 
 token: "CHANGE_ME!"
 
-#argocd_url: "argo.g08.local"
-argocd_url: "192.168.122.11.nip.io"
+argocd_url: "argo.g08.local"
 
 # Optional vars
 # extra_server_args: ""
