--- a/infrastructure/ansible/roles/haproxy/tasks/main.yml
+++ b/infrastructure/ansible/roles/haproxy/tasks/main.yml
@@ -1,34 +1,34 @@
---- 
+---
 - name: Ensure directory for APT keyrings exists
   become: true
   ansible.builtin.file:
     path: /etc/apt/keyrings
     state: directory
-    mode: '0755'
+    mode: "0755"
 
 - name: Download HAProxy archive keyring
   ansible.builtin.get_url:
     url: "{{ haproxy_repo_key_url }}"
     dest: "{{ haproxy_repo_key_path }}"
-    mode: '0644'
+    mode: "0644"
 
 - name: Add HAProxy APT repository
   ansible.builtin.copy:
     dest: "{{ haproxy_repo_list_path }}"
     content: |
       deb [signed-by={{ haproxy_repo_key_path }}] {{ haproxy_repo_url }} {{ haproxy_repo_distribution }}-{{ haproxy_version }} {{ haproxy_repo_component }}
-    mode: '0644'
+    mode: "0644"
 
 - name: Update APT cache
   ansible.builtin.apt:
-    update_cache: yes
+    update_cache: true
 
 - name: Install HAProxy version {{ haproxy_version }}
   become: true
   ansible.builtin.apt:
     name: "haproxy={{ haproxy_version }}.*"
     state: present
-    update_cache: yes
+    update_cache: true
 
 - name: Copy HAProxy config
   ansible.builtin.template:
@@ -42,5 +42,4 @@
   ansible.builtin.service:
     name: haproxy
     state: restarted
-    enabled: yes
-
+    enabled: true
