--- a/infrastructure/ansible/roles/kube_tools/tasks/helm.yml
+++ b/infrastructure/ansible/roles/kube_tools/tasks/helm.yml
@@ -1,7 +1,7 @@
 ---
 - name: Get Helm installed version
   ansible.builtin.command: helm version --short
-  register: helm_version_output
+  register: kube_tools_helm_version_output
   changed_when: false
   ignore_errors: true
 
@@ -9,7 +9,7 @@
 # 1. Helm is not installed (rc != 0)
 # 2. OR the installed version differs from helm_version
 - name: Download Artifact only if needed
-  when: helm_version_output.rc != 0 or (helm_version not in helm_version_output.stdout) 
+  when: kube_tools_helm_version_output.rc != 0 or (helm_version not in kube_tools_helm_version_output.stdout)
   block:
     - name: Download Helm archive
       ansible.builtin.get_url:
@@ -26,7 +26,7 @@
     - name: Install Helm binary
       ansible.builtin.copy:
         src: "/tmp/{{ os_type }}-{{ os_arch }}/helm"
-        dest: "{{ helm_install_dir }}/helm"
+        dest: "{{ kube_tools_helm_install_dir }}/helm"
         mode: "0755"
         remote_src: true
       become: true
