fix sonar exclusions

--- a/web/sonar-project.properties
+++ b/web/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.projectKey=ruegerj_devops_web
 
 # Code
 sonar.sources=src
-sonar.exclusions=**/*.spec.ts,src/lib/components/ui,src/lib/server/coverage.handler.ts
+sonar.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/ui/*,src/lib/server/coverage.handler.ts
 
 # Tests
 sonar.tests=.
