--- a/.github/workflows/lint-web.yaml
+++ b/.github/workflows/lint-web.yaml
@@ -81,6 +81,10 @@ jobs:
 
       - name: Create coverage reports
         run: task test:cov show=false
+
+      - name: Adjust coverage report for SonarQube
+        run: sed -i 's|^SF:|SF:web/|' coverage/combined/lcov.info
+
       - name: SonarQube Scan
         uses: SonarSource/sonarqube-scan-action@master
         env:
