--- a/web/sonar-project.properties
+++ b/web/sonar-project.properties
@@ -2,10 +2,11 @@ sonar.organization=ruegerj
 sonar.projectKey=ruegerj_devops_web
 
 # Code
-sonar.sources=src
+sonar.sources=src/*
 sonar.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/ui/*,src/lib/server/coverage.handler.ts
 
 # Tests
 sonar.tests=.
 sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
+sonar.coverage.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/ui/**,src/lib/server/coverage.handler.ts
 sonar.javascript.lcov.reportPaths=coverage/combined/lcov.info
