--- a/web/sonar-project.properties
+++ b/web/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.organization=ruegerj
 sonar.projectKey=ruegerj_devops_web
 
 # Code
-sonar.sources=src/*
+sonar.sources=src
 sonar.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/ui/*,src/lib/server/coverage.handler.ts
 
 # Tests
