--- a/web/sonar-project.properties
+++ b/web/sonar-project.properties
@@ -6,6 +6,10 @@ sonar.sources=src
 sonar.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/ui/*,src/lib/server/coverage.handler.ts
 
 # Tests
-sonar.tests=.
+sonar.tests=src
+sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
+sonar.coverage.inclusions=**/*.ts,**/*.svelte
+
+# Coverage
 sonar.coverage.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/ui/**,src/lib/server/coverage.handler.ts
 sonar.javascript.lcov.reportPaths=coverage/combined/lcov.info
