--- a/.github/workflows/qa-web.yaml
+++ b/.github/workflows/qa-web.yaml
@@ -22,6 +22,10 @@ jobs:
           version: 10
           run_install: false
 
+      # speed up for playwright install
+      - name: Uninstall man
+        run: sudo apt-get --yes remove --purge man-db
+
       - name: Cache node_modules
         id: cache-node_modules
         uses: actions/cache@v4
@@ -40,7 +44,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Install Playwright Browsers
-        run: pnpm dlx playwright install --with-deps
+        run: pnpm exec playwright install --with-deps chromium
 
       - name: Create coverage reports
         run: task test:cov show=false
