--- a/.github/workflows/test-web.yaml
+++ b/.github/workflows/test-web.yaml
@@ -55,6 +55,10 @@ jobs:
           version: 10
           run_install: false
 
+      # speed up for playwright install
+      - name: Uninstall man
+        run: sudo apt-get --yes remove --purge man-db
+
       - name: Cache node_modules
         id: cache-node_modules
         uses: actions/cache@v4
@@ -73,7 +77,7 @@ jobs:
         run: pnpm install --frozen-lockfile
 
       - name: Install Playwright Browsers
-        run: pnpm dlx playwright install --with-deps
+        run: pnpm exec playwright install --with-deps chromium
 
       - name: Run Playwright Tests
         run: pnpm run test:e2e
