--- a/web/sonar-project.properties
+++ b/web/sonar-project.properties
@@ -8,8 +8,8 @@ sonar.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/ui/*,src/lib/serve
 # Tests
 sonar.tests=src
 sonar.test.inclusions=**/*.spec.ts,**/*.test.ts
-sonar.coverage.inclusions=**/*.ts,**/*.svelte
 
 # Coverage
+sonar.coverage.inclusions=**/*.ts,**/*.svelte
 sonar.coverage.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/ui/**,src/lib/server/coverage.handler.ts
-sonar.javascript.lcov.reportPaths=coverage/combined/lcov.info
+sonar.typescript.lcov.reportPaths=coverage/combined/lcov.info
