ignore sonar issue for re-exports in ts barrel files

--- a/web/sonar-project.properties
+++ b/web/sonar-project.properties
@@ -9,3 +9,9 @@ sonar.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/ui/*,src/lib/serve
 sonar.coverage.inclusions=**/*.ts,**/*.svelte
 sonar.coverage.exclusions=**/*.spec.ts,**/*.test.ts,src/lib/components/ui/**,src/lib/server/coverage.handler.ts
 sonar.typescript.lcov.reportPaths=coverage/combined/lcov.info
+
+# Ignored rules
+sonar.issue.ignore.multicriteria=e1
+
+sonar.issue.ignore.multicriteria.e1.ruleKey=typescript:S7763
+sonar.issue.ignore.multicriteria.e1.resourceKey=**/index.ts
