--- a/.github/workflows/qa-web.yaml
+++ b/.github/workflows/qa-web.yaml
@@ -13,6 +13,7 @@ jobs:
       NODE_ENV: ci
       API_BASE_URL: ${{ vars.CI_API_BASE_URL }}
       ACCESS_TOKEN: ${{ secrets.CI_ACCESS_TOKEN }}
+      USE_PLUGIN_ISTANBUL: true
     steps:
       - uses: actions/checkout@v4
       - uses: arduino/setup-task@v2
