--- a/web/package.json
+++ b/web/package.json
@@ -15,7 +15,7 @@
 		"test:unit": "vitest",
 		"test": "pnpm run test:unit -- --run && pnpm run test:e2e",
 		"test:e2e": "playwright test",
-		"test:cov": "vitest run --coverage && USE_PLUGIN_ISTANBUL=true pnpm run test:e2e",
+		"test:cov": "vitest run --coverage && pnpm run test:e2e",
 		"cov:merge": "node scripts/postprocess-coverage.cjs && nyc report --temp-dir=coverage --reporter=lcov --reporter=text-summary"
 	},
 	"devDependencies": {
