--- a/web/package.json
+++ b/web/package.json
@@ -50,6 +50,7 @@
 		"istanbul-lib-coverage": "^3.2.2",
 		"istanbul-lib-source-maps": "^5.0.6",
 		"istanbul-reports": "^3.2.0",
+		"jsdom": "^27.1.0",
 		"jsonwebtoken": "^9.0.2",
 		"nyc": "^17.1.0",
 		"playwright": "^1.55.1",
