--- a/.github/workflows/qa-api.yaml
+++ b/.github/workflows/qa-api.yaml
@@ -26,6 +26,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_API }}
         with:
           projectBaseDir: api
+          args: >
+            -Dsonar.qualitygate.wait=true
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
