--- a/.github/workflows/qa-web.yaml
+++ b/.github/workflows/qa-web.yaml
@@ -56,6 +56,8 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_WEB }}
         with:
           projectBaseDir: web
+          args: >
+            -Dsonar.qualitygate.wait=true
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
