use env var toggle for api e2e instrumentation

--- a/.github/workflows/qa-api.yaml
+++ b/.github/workflows/qa-api.yaml
@@ -6,6 +6,8 @@ jobs:
   sonarqube:
     name: Sonar
     runs-on: ubuntu-latest
+    env:
+      INSTRUMENT_BINARY: true
     defaults:
       run:
         working-directory: api
